# Python_simple_data_analysis

./: README.md  data_analysis.ipynb  pyproject.toml  test_processing_data.py
data_analysis_package/: processing_data.py  run_analysis.py
data_analysis_package/data/: alkohol2024.csv  powierzchnia_geodezyjna2024.xlsx
