[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python_simple_data_analysis"
version = "0.1.0"
dependencies = [
  "pandas",
  "numpy"
]

[tool.setuptools]
packages = ["data_analysis_package"]

[tool.setuptools.package-data]
"data_analysis_package" = ["data/*.csv", "data/*.xlsx"]